<resources>
    <string name="app_name" translatable="false">MercadoFinder</string>
    <string name="price_format" translatable="false">$%s</string>
    <string name="empty_amount" translatable="false">-</string>

    <string name="search_field_hint">What are you looking for?</string>
    <string name="get_started_message">Type something to start your search</string>
    <string name="empty_search_list">No results found</string>
    <string name="unexpected_error_message">Oops! Something went wrong\nPlease, try again later</string>
    <string name="connection_error_message">Connection error\nCheck your internet connection and try again</string>
    <string name="price">Price:</string>
    <string name="free_shipping">Free shipping:</string>
    <string name="condition">Condition:</string>
    <string name="no_internet_browser_toast_message">You don\'t have an internet browser to open this link with :(</string>
    <string name="sold">Sold:</string>
    <string name="available">Available:</string>
    <string name="go_to_product_page">Go to product\'s page</string>
    <string name="available_first_range">less than fifty</string>
    <string name="available_second_range">less than a hundred</string>
    <string name="available_third_range">over a hundred</string>
    <string name="sold_second_range">less than 50</string>
    <string name="sold_third_range">less than 100</string>
    <string name="sold_fourth_range">over a hundred</string>
    <string name="condition_new">new</string>
    <string name="condition_used">used</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="installments_format">or %s x %s</string>
    <string name="product_detail">Product detail</string>
    <string name="empty_search_field_message">You need to type something to search</string>
    <string name="detail_fragment_welcome_message">Once you find something you like,\nthe product\'s details will appear here</string>
</resources>